# opcua-asyncio

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .python-version  .readthedocs.yml  .travis.yml  CHANGELOG.md  Dockerfile  README.md  agent.md  dev_requirements.txt  my-changes.patch  pyproject.toml  pytest.ini  release.py  ruff.toml  run-tests.sh  setup.cfg  setup.py  test_external_server.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  python-package.yml  python-publish.yml  release.yml
asyncua/: __init__.py  sync.py  tools.py
asyncua/client/: __init__.py  client.py  ua_client.py  ua_file.py  ua_file_transfer.py  ua_session.py
asyncua/common/: __init__.py  callback.py  connection.py  copy_node_util.py  event_objects.py  events.py  instantiate_util.py  manage_nodes.py  methods.py  node.py  node_factory.py  parameter_set.py  session_interface.py  shortcuts.py  sql_injection.py  statemachine.py  structures.py  structures104.py  subscription.py  type_dictionary_buider.py  type_dictionary_builder.py  ua_utils.py  utils.py  xmlexporter.py  xmlimporter.py  xmlparser.py
asyncua/crypto/: cert_gen.py  certificate_handler.py  permission_rules.py  security_policies.py  truststore.py  uacrypto.py  validator.py
asyncua/pubsub/: __init__.py  connection.py  dataset.py  information_model.py  protocols.py  pubsub.py  reader.py  subscribed_dataset.py  subscriped_dataset.py  uadp.py  udp.py  untils.py  utils.py  writer.py
asyncua/server/: __init__.py  address_sapce.puml  address_space.py  base.py  binary_server_asyncio.py  event_generator.py  history.py  history_mongo.py  history_sql.py  internal_server.py  internal_session.py  internal_subscription.py  monitored_item_service.py  reverse_connect.py  server.py  subscription_service.py  uaprocessor.py  user_managers.py  users.py
asyncua/ua/: __init__.py  _generated.py  attribute_ids.py  object_ids.py  relative_path.py  status_codes.py  ua_binary.py  uaprotocol_auto.py  uaprotocol_hand.py  uatypes.py
docs/: conf.py  index.rst  requirements.txt  user_management.md
docs/api/: asyncua.client.ha.rst  asyncua.client.rst  asyncua.common.rst  asyncua.crypto.rst  asyncua.rst  asyncua.server.rst  asyncua.server.standard_address_space.rst  asyncua.ua.rst  asyncua.ua.uaerrors.rst  index.rst
docs/usage/: index.rst
examples/: StateMachine.Example.NodeSet2.xml  cert-config.cnf  client-alarms-and-conditions.py  client-cert-chain.py  client-custom-structures-and-enums.py  client-data-type-definition.py  client-events.py  client-example.py  client-file.py  client-limits.py  client-minimal-auth.py  client-minimal.py  client-reconnect.py  client-subscription.py  client-ua-file-transfer.py  client-with-encryption.py  client_deleting.py  client_play_with_type_definition.py  client_read-custom_structures.py  client_to_demo-this.com.py  client_to_kepware.py  client_to_prosys.py  client_to_prosys_cert.py  client_to_prosys_crypto.py  client_to_prosys_sub.py  client_to_uanet_alarm_conditions.py  client_ua_file_transfer.py  finitestatemachine-example.py  generate_certificate.sh  generate_certificates.py  ha_client-example.py  my_cert.der  my_cert.pem  my_private_key.pem  perf-client.py  server-alarms-and-conditions.py  server-callback.py  server-create-custom-structures.py  server-custom-object.py  server-custom-struct-name-collision.py  (+23 more)
examples/certificates/: peer-certificate-example-1.der  peer-certificate-example-2.der  peer-certificate-example-3.der  peer-certificate-example-encrypted-private-key.der  peer-private-key-example-1.pem  peer-private-key-example-2.pem  peer-private-key-example-3.pem  peer-private-key-example-encrypted-private-key.pem
examples/pubsub/: publisher_simple.py  publisher_standalone.py  pubsub_subscriber_standalone.py  subscriber_simple.py  subscriber_standalone.py
examples/simple-client-server-xml/: client_minimal.py  server.py
examples/sync/: client-example.py  client-minimal.py  client_to_prosys.py  server-example.py  server-minimal.py
opcua/: sync.py  tools.py
opcua/client/: client.py  ua_client.py
opcua/common/: event_objects.py  events.py  manage_nodes.py  node.py  shortcuts.py  structure_extension.py  structures.py  subscription.py  type_dictionary_buider.py  ua_utils.py  xmlexporter.py  xmlimporter.py  xmlparser.py
opcua/server/: address_space.py  binary_server_asyncio.py  event_generator.py  history.py  history_sql.py  internal_server.py  internal_subscription.py  (+3 more)
schemas/: NodeIds.csv  Opc.Ua.NodeSet2.Part10.xml  Opc.Ua.NodeSet2.Part11.xml  Opc.Ua.NodeSet2.Part13.xml  Opc.Ua.NodeSet2.Part3.xml  Opc.Ua.NodeSet2.Part4.xml  Opc.Ua.NodeSet2.Part5.xml  Opc.Ua.NodeSet2.Part8.xml  Opc.Ua.NodeSet2.Part9.xml  Opc.Ua.NodeSet2.xml  Opc.Ua.Types.bsd  Opc.Ua.Types.xsd  README.md  generate_address_space.py  generate_event_objects.py  generate_ids.py  generate_model.py  generate_model_event.py  generate_model_from_nodeset.py  generate_protocol_python.py  generate_statuscode.py  generate_uaerrors.py  uaprotocol_auto_add.py  update_ua_nodeset.py
tests/: conftest.py  custom_enum.xml  custom_extension_with_optional_fields.xml  custom_nodes.xml  custom_nodesns.xml  custom_nodesns_2.xml  custom_nodesns_3.xml  custom_nodesns_4.xml  custom_ns_meta_add.xml  custom_struct.xml  custom_struct_recursive.xml  example.bsd  substructs.xml  test_alias_functionality.py  test_auto_reconnect.py  test_callback.py  test_callback_service.py  test_cert_chain.py  test_client.py  test_client_cert_chain.py  test_common.py  test_connections.py  test_crypto_connect.py  test_custom_structures.py  test_gen_certificates.py  test_ha_client.py  test_history.py  test_history_events.py  test_history_limits.py  test_password.py  test_permissions.py  test_pubsub.py  test_relative_path.py  test_requirement_fail.xml  test_requirement_pass.xml  test_reverse_connect.py  test_server.py  test_server_limits.py  test_standard_address_space.py  test_subscription_iterator.py  (+17 more)
tools/: uacall  uaclient  uadiscover  uahistoryread  uals  uaread  uaserver  uasubscribe  uawrite
(+105 files in other folders)
