[project]
name = "asyncua"
version = "1.2b1"
description = "Pure Python OPC-UA client and server library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GNU Lesser General Public License v3 or later" }
authors = [
  { name = "Olivier Roulet-Dubonnet", email = "olivier.roulet@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "aiosqlite",
  "anyio",
  "cryptography>42.0.0",
  "pyOpenSSL>23.2.0",
  "python-dateutil",
  "pytz",
  "sortedcontainers",
  "typing-extensions",
  "wait_for2;python_version<'3.12'",
]

[project.urls]
Homepage = "http://freeopcua.github.io/"
Repository = "https://github.com/FreeOpcUa/opcua-asyncio"

[project.scripts]
uabrowse = "asyncua.tools:uals"
uacall = "asyncua.tools:uacall"
uaclient = "asyncua.tools:uaclient"
uadiscover = "asyncua.tools:uadiscover"
uageneratestructs = "asyncua.tools:uageneratestructs"
uahistoryread = "asyncua.tools:uahistoryread"
uals = "asyncua.tools:uals"
uaread = "asyncua.tools:uaread"
uaserver = "asyncua.tools:uaserver"
uasubscribe = "asyncua.tools:uasubscribe"
uawrite = "asyncua.tools:uawrite"

[project.optional-dependencies]
profile = [
  "pytest-profiling",
]

[dependency-groups]
dev = [
  "asynctest",
  "coverage",
  "mypy",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-mock",
  "pytest-repeat",
  "ruff",
  "types-pyOpenSSL",
  "types-python-dateutil",
  "types-pytz",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/asyncua"]

[tool.mypy]
disable_error_code = ["misc", "arg-type", "assignment", "var-annotated"]
check_untyped_defs = false

[[tool.mypy.overrides]]
# Autogenerated file
module = "asyncua.ua.uaprotocol_auto.*"
disable_error_code = ["literal-required", "name-defined"]

[[tool.mypy.overrides]]
module = "asyncua.client.*"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "asynctest.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wait_for2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiosqlite.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
log_cli = false
log_level = "INFO"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "module"
asyncio_default_fixture_loop_scope = "module"

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [
  "docs",
  "nodeset",
  "schemas",
  "*_auto.py",
  "event_objects.py",
  "standard_address_space_services*.py",
]

[tool.ruff.lint]
select = [
  "ANN",
  "E",
  "F",
  "G004",
  "W",
  "UP",
  "YTT",
  "ASYNC",
  "T10",
  "ISC",
  "G",
  "PIE",
  "RET",
  "INT",
  "RUF",
  "PLE",
  "I",
]
ignore = [
  "E111",  # conflicts with ruff format, cf doc
  "E114",  # conflicts with ruff format, cf doc
  "E117",  # conflicts with ruff format, cf doc
  "E501",  # conflicts with ruff format, cf doc
  "UP032",  # Use f-string instead of `format` call
  "UP030",  # Use implicit references for positional format fields
  "UP037",  # due to protocol using class member name same as object type we want to use quotes and precise ua namespace
  "ASYNC110",  # too many false positives
  "RET504",  # do not agree
  "RUF015",  # Not sure
  "ANN401",  # typing.Any is legitimate in many places
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["ANN", "F401", "F403", "I"]
"examples/*" = ["ANN", "F841", "E402"]
"tests/**" = ["ANN"]
"release.py" = ["ANN"]
"test_external_server.py" = ["ANN"]

# Directories with no typed files yet
"asyncua/tools.py" = ["ANN"]
"asyncua/crypto/**" = ["ANN"]
"asyncua/ua/uaprotocol_hand.py" = ["ANN"]
"asyncua/ua/uaprotocol_auto.py" = ["ANN"]
"asyncua/ua/uaerrors/**" = ["ANN"]
"asyncua/ua/status_codes.py" = [
  "ANN",
  "RUF001"
]  # we get some crappy chars from spec
"asyncua/ua/object_ids.py" = ["ANN"]
"asyncua/ua/attribute_ids.py" = ["ANN"]
"asyncua/pubsub/**" = ["ANN"]
"asyncua/server/standard_address_space/**" = ["ANN"]
# Non-typed files in otherwise typed directories
"asyncua/client/ha/**" = ["ANN"]
"asyncua/client/ua_file.py" = ["ANN"]
"asyncua/client/ua_file_transfer.py" = ["ANN"]
"asyncua/server/address_space.py" = ["ANN"]
"asyncua/server/binary_server_asyncio.py" = ["ANN"]
"asyncua/server/event_generator.py" = ["ANN"]
"asyncua/server/history.py" = ["ANN"]
"asyncua/server/history_sql.py" = ["ANN"]
"asyncua/server/internal_server.py" = ["ANN"]
"asyncua/server/internal_session.py" = ["ANN"]
"asyncua/server/internal_subscription.py" = ["ANN"]
"asyncua/server/monitored_item_service.py" = ["ANN"]
"asyncua/server/subscription_service.py" = ["ANN"]
"asyncua/server/uaprocessor.py" = ["ANN"]
"asyncua/server/user_managers.py" = ["ANN"]
"asyncua/common/callback.py" = ["ANN"]
"asyncua/common/connection.py" = ["ANN"]
"asyncua/common/copy_node_util.py" = ["ANN"]
"asyncua/common/event_objects.py" = ["ANN"]
"asyncua/common/instantiate_util.py" = ["ANN"]
"asyncua/common/manage_nodes.py" = ["ANN"]
"asyncua/common/methods.py" = ["ANN"]
"asyncua/common/node_factory.py" = ["ANN"]
"asyncua/common/session_interface.py" = ["ANN"]
"asyncua/common/shortcuts.py" = ["ANN"]
"asyncua/common/sql_injection.py" = ["ANN"]
"asyncua/common/statemachine.py" = ["ANN"]
"asyncua/common/structures.py" = ["ANN"]
"asyncua/common/type_dictionary_builder.py" = ["ANN"]
"asyncua/common/ua_utils.py" = ["ANN"]
"asyncua/common/utils.py" = ["ANN"]
"asyncua/common/xmlexporter.py" = ["ANN"]
"asyncua/common/xmlimporter.py" = ["ANN"]
"asyncua/common/xmlparser.py" = ["ANN"]
